2004-01-03  David Malcolm <david@davemalcolm.demon.co.uk>

	* Makefile.am, selection-to-text.xsl

	New file

2004-01-02  David Malcolm <david@davemalcolm.demon.co.uk>

	* conglomerate.schemas.in

	Changed GConf path to be custom-dispspec-paths, and removed all of the installation paths from it, as a fix for bug #129776

2004-01-02  Geert Stappers <stappers@stappers.nl>

	* conglomerate.schemas.in

	Less harmfull package data diretory expansion,
	see bugzilla #129776 for details.

2003-12-21  Geert Stappers <stappers@stappers.nl>

	* conglomerate.schemas.in

	Some kind of package data directory expansion,
	see bugzilla #129776 for details.

	* Makefile.am

	Support for gconf schema install

2003-12-11  Robert Varga <frozenfingers@xs4all.nl>

	* conglomerate.keys.in, conglomerate.mime
	
	Added text/x-rng mime type and application binding.

2003-12-05  Robert Varga <frozenfingers@xs4all.nl>

	* conglomerate.keys.in, coglomerate.mime
	Added text/x-xsl mime type and application binding.

2003-11-23  Robert Varga <frozenfingers@xs4all.nl>

	* conglomerate.keys.in, conglomerate.mime, conglomerate.applications, Makefile.am
	fix for bug 108400: desktop integration

2003-10-28  Jeff Martin

	* conglomerate.schema
	path of templates

2003-10-27  Geert Stappers <stappers@stappers.nl>

	* ChangeLog:
	Created this file.

	* catalog & catalog.xml
	Files that Steinar Bang provided in bugzilla#122011.