@@ -1,3 +1,7 @@
+2004-06-04  David Malcolm  <dmalcolm@redhat.com>
+
+	* docbook.css: New file
+
 2004-01-03  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* Makefile.am, selection-to-text.xsl
